get import of users and channels going, finish up Makefile
fix some places that slack's json export didn't have some fields for user like color or real_name
clean up some of the frontend build stuff, pin versions

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,3 +1,6 @@
 FROM ubuntu
 MAINTAINER Ross MacLeod
+RUN apt-get update && apt-get install -y libpq5 libgmp10
+ADD static /static
 ADD alexandria-server alexandria-importer client-session-key.aes settings.yml /
+CMD ["/alexandria-server", "settings.yml"]
