--- a/client/bower.json
+++ b/client/bower.json
@@ -8,7 +8,7 @@
   "main": "support/index.js",
   "license": "Apache-2.0",
   "dependencies": {
-    "purescript-pux": "^3.0.0",
-    "purescript-debug": "^0.1.3"
+    "purescript-pux": "3.1.0",
+    "purescript-debug": "0.1.3"
   }
 }
