--- a/client/package.json
+++ b/client/package.json
@@ -1,14 +1,8 @@
 {
-  "name": "purescript-starter-app",
+  "name": "alexandria-client",
   "version": "5.0.1",
-  "description": "Starter Pux application using webpack with hot-reloading.",
+  "description": "Frontend for Alexandria Slack archive",
   "main": "support/index.js",
-  "keywords": [
-    "pux",
-    "purescript-pux",
-    "boilerplate",
-    "starter-app"
-  ],
   "scripts": {
     "postinstall": "./node_modules/.bin/bower cache clean && ./node_modules/.bin/bower install",
     "clean": "rimraf dist && rimraf output",
@@ -28,23 +22,23 @@
     "url": "https://github.com/alexmingoia/pux-starter-app/issues"
   },
   "dependencies": {
-    "react": "^15.0.0",
-    "react-dom": "^15.0.0",
-    "purescript": "^0.8.4"
+    "react": "15.0.1",
+    "react-dom": "15.0.1",
+    "purescript": "0.8.4"
   },
   "devDependencies": {
-    "bower": "^1.7.9",
-    "express": "^4.13.4",
-    "html-webpack-plugin": "^2.15.0",
-    "http-server": "^0.9.0",
-    "purescript-psa": "^0.3.5",
-    "purescript-webpack-plugin": "^0.3.0",
-    "purs-loader": "^0.6.0",
-    "rimraf": "^2.5.2",
-    "source-map-loader": "^0.1.5",
-    "webpack": "^1.12.14",
-    "webpack-dev-middleware": "^1.6.1",
-    "webpack-hot-middleware": "^2.10.0",
-    "webpack-strip": "^0.1.0"
+    "bower": "1.7.9",
+    "express": "4.13.4",
+    "html-webpack-plugin": "2.16.0",
+    "http-server": "0.9.0",
+    "purescript-psa": "0.3.7",
+    "purescript-webpack-plugin": "0.3.0",
+    "purs-loader": "0.6.0",
+    "rimraf": "2.5.2",
+    "source-map-loader": "0.1.5",
+    "webpack": "1.13.0",
+    "webpack-dev-middleware": "1.6.1",
+    "webpack-hot-middleware": "2.10.0",
+    "webpack-strip": "0.1.0"
   }
 }
