--- a/server/config/settings.yml
+++ b/server/config/settings.yml
@@ -14,11 +14,9 @@ ip-from-header: "_env:IP_FROM_HEADER:false"
 # In development, they default to the inverse.
 #
 development: true
-# detailed-logging: false
-# should-log-all: false
-# reload-templates: false
+detailed-logging: "_env:DETAILEDLOGGING:false"
+should-log-all: "_env:SHOULDLOGALL:false"
 # mutable-static: false
-# skip-combining: false
 
 # NB: If you need a numeric value (e.g. 123) to parse as a String, wrap it in single quotes (e.g. "_env:PGPASS:'123'")
 # See https://github.com/yesodweb/yesod/wiki/Configuration#parsing-numeric-values-as-strings
