--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,8 @@ services:
 cache:
   directories:
     - $HOME/.stack/
+    - client/node_modules/
+    - client/bower_modules/
 
 before_install:
   - mkdir -p ~/.local/bin
