install node AND npm

--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,7 @@ before_install:
   - export PATH=$HOME/.local/bin:$PATH
   - travis_retry curl -L https://www.stackage.org/stack/linux-x86_64 | tar xz --wildcards --strip-components=1 -C ~/.local/bin '*/stack'
   - sudo apt-get -qq update
-  - sudo apt-get install -y npm libpq5 libgmp10
+  - sudo apt-get install -y node npm libpq5 libgmp10
 
 install:
   - make setup
