--- a/.travis.yml
+++ b/.travis.yml
@@ -21,8 +21,9 @@ before_install:
   - mkdir -p ~/.local/bin
   - export PATH=$HOME/.local/bin:$PATH
   - travis_retry curl -L https://www.stackage.org/stack/linux-x86_64 | tar xz --wildcards --strip-components=1 -C ~/.local/bin '*/stack'
+  - curl -sL https://deb.nodesource.com/setup | sudo bash -
   - sudo apt-get -qq update
-  - sudo apt-get install -y node npm libpq5 libgmp10
+  - sudo apt-get install -y nodejs npm libpq5 libgmp10
 
 install:
   - make setup
