--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,7 @@ before_install:
   - travis_retry curl -L https://www.stackage.org/stack/linux-x86_64 | tar xz --wildcards --strip-components=1 -C ~/.local/bin '*/stack'
   - curl -sL https://deb.nodesource.com/setup | sudo bash -
   - sudo apt-get -qq update
-  - sudo apt-get install -y nodejs npm libpq5 libgmp10
+  - sudo apt-get install -y nodejs build-essential libpq5 libgmp10
 
 install:
   - make setup
