get import messages partially working
though it fails to parse some, so need to switch to Data.Aeson.BetterErrors
add subtype field to messages, getting a fun whirlwind education on how persistent migrations work from Dr. Source Code
add --fresh option to importer to have it delete things before it imports

--- a/server/alexandria-server.cabal
+++ b/server/alexandria-server.cabal
@@ -97,6 +97,9 @@ library
                  , optparse-applicative
                  , path-pieces
                  , http-api-data
+                 , mtl
+                 , directory
+                 , filepath
 
 executable         alexandria-server
     if flag(library-only)
